--- a/HackCU V/poker_game.html
+++ b/HackCU V/poker_game.html
@@ -10,7 +10,7 @@
 		<div class=container>
 			<div class="row1">
 				<div class="col">
-					<p id="pot">Pot</p>
+					<p id="pot"> Pot </p>
 				</div>
 			</div>
 			<div class="row2">
@@ -44,7 +44,11 @@
 	<br>
 	<br>
 	<button id="flipButton" onclick=flipCard()>Flip Card</button>
-	<button id="betButton" onclick=fillPot()>Make Bet</button>
+	<button id="raiseButton" onclick=fillPot()>Raise</button>
+	<button id="callButton">Call</button>
+	<button id="checkButton">Check</button>
+	<button id="foldButton">Fold</button>
+	
 
 
 	<table id="playerTable"></table>
